# franka_door

./: .gitignore  CMakeLists.txt
.history/: .gitignore_20240613195049
.history/include/: controller_20240708154706.h
.history/simulate/: controller_20240708133409.cpp  controller_20240708133605.cpp  controller_20240708133707.cpp  controller_20240708133713.cpp  controller_20240708135751.cpp  controller_20240708152058.cpp  controller_20240708154643.cpp  controller_20240708160413.cpp
include/: controller.h  custommath.h  trajectory.h
model/: assets_fr3.xml  mjinclude_door.xml  mjinclude_fr3.xml  scene_door.xml  scene_door_assets.xml
py_src/: Classifier.py  MUJOCO_LOG.TXT  fr3Env.py  main.py  main_bc.py  main_compare.py  main_single_agent.py  plot_frames.py  plot_torque.py  rotations.py  save_model_as_layer.py  tools.py  ttt.py
py_src/bc/: structure.py
py_src/data/: heuristic_rpy_data.npy  heuristic_xyz_data.npy  rpy_data.npy  xyz_data.npy
py_src/log/0621_1/8.0/force/: _actor  _actor_optimizer  _alpha_optimizer  _log_alpha
py_src/log/0621_1/8.0/rotation/: _actor  _actor_optimizer  _alpha_optimizer  _log_alpha
py_src/tqc/: structures.py  trainer.py
simulate/: console  console.cpp  controller.cpp  example-app.cpp  main.cc  robotmodel.cpp  trajectory.cpp
